--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand mx-auto" href="#">
-            <h1 class="mb-0">CAYETANO</h1>
-          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,27 +31,32 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            class="collapse navbar-collapse justify-content-center"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="./index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/preguntas.html">Preguntas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/cambios.html">Cambios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">Contactos</a>
-              </li>
-            </ul>
+          <div class="navbar-brand mx-auto text-center">
+            <h1>CAYETANO</h1>
+            <div class="separator"></div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/productos.html"
+                    >Productos</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/preguntas.html"
+                    >Preguntas</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/cambios.html">Cambios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/contacto.html">Contactos</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
