--- a/pages/productos.html
+++ b/pages/productos.html
@@ -24,9 +24,6 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand mx-auto" href="#">
-            <h1 class="mb-0">CAYETANO</h1>
-          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,27 +35,28 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div
-            class="collapse navbar-collapse justify-content-center"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./preguntas.html">Preguntas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./cambios.html">Cambios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contactos</a>
-              </li>
-            </ul>
+          <div class="navbar-brand mx-auto text-center">
+            <h1>CAYETANO</h1>
+            <div class="separator"></div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./preguntas.html">Preguntas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./cambios.html">Cambios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contacto.html">Contactos</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
@@ -77,7 +75,7 @@
               data-bs-target="#productoModal1"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>REME SUPPLY</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -94,7 +92,7 @@
               data-bs-target="#productoModal2"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>REME MALIBU</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -111,7 +109,7 @@
               data-bs-target="#productoModal3"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>REME OCEAN</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -128,7 +126,7 @@
               data-bs-target="#productoModal4"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>REME SURF FACES</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -147,7 +145,7 @@
               data-bs-target="#productoModal5"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>BUZO HOMIES</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -164,7 +162,7 @@
               data-bs-target="#productoModal6"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>BUZO NEW WORLD</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -181,7 +179,7 @@
               data-bs-target="#productoModal7"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>BUZO WONDER</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -198,7 +196,7 @@
               data-bs-target="#productoModal8"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>BUZO AZUL</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -217,7 +215,7 @@
               data-bs-target="#productoModal9"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>PUFER AZUL</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -234,7 +232,7 @@
               data-bs-target="#productoModal10"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>PUFER MARRON</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -251,7 +249,7 @@
               data-bs-target="#productoModal11"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>PUFER VIOLETA</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
@@ -268,7 +266,7 @@
               data-bs-target="#productoModal12"
             />
             <div class="overlay">
-              <div class="overlay-content">
+              <div class="overlay-content text-center">
                 <h3>PUFER ROJA</h3>
                 <button class="btn btn-comprar boton-comprar">Comprar</button>
               </div>
